--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,8 +18,8 @@
             <h5 class="card-title"><%= book.title %></h5>
             <h6 class="card-subtitle mb-2 text-muted"><%= book.genre %>, <%= book.author %></h6>
             <p class="card-text"><%= book.description %></p>
-            <a href="#" class="card-link">Edit</a>
-            <a href="#" class="card-link">Delete</a>
+            <a href="/books/edit/<%= book._id %>" class="card-link">Edit</a>
+            <a href="/books/delete/<%= book._id %>" class="card-link">Delete</a>
           </div>
         </div>
       <% }) %>
