--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,15 +11,15 @@
     <a class="btn btn-success" href="/books/add">Add book</a>
     <hr />
 
-    <div>
-      <% bookList.forEach(book => { %>
-        <div class="card" style="margin: 10px;">
+    <div class="row">
+      <% bookList.forEach((book, i) => { %>
+        <div class="card" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title"><%= book.title %></h5>
             <h6 class="card-subtitle mb-2 text-muted"><%= book.genre %>, <%= book.author %></h6>
             <p class="card-text"><%= book.description %></p>
-            <a href="#" class="card-link">Edit</a>
-            <a href="#" class="card-link">Delete</a>
+            <a href="/books/edit/<%= book._id %>" class="card-link">Edit</a>
+            <a href="/books/remove/<%= i %>" class="card-link">Delete</a>
           </div>
         </div>
       <% }) %>
