--- a/views/editBooks.ejs
+++ b/views/editBooks.ejs
@@ -8,7 +8,7 @@
 <body>
 <h1><%= title %></h1>
 
-<form>
+<form method="post" action="/books/saveEdited/<%= book._id %>">
     <div class="form-group">
         <label for="name">Title:</label>
         <input type="string" class="form-control" id="title" name="title" value="<%= book.title %>" placeholder="Enter title">
